--- a/package.json
+++ b/package.json
@@ -11,16 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.66.1",
-    "styled-components": "^6.0.7"
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.67.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
